# cacco

./: .editorconfig  .env.example  .fourmolu.yaml  .gitignore  LICENSE  Makefile  README.asciidoc  README.md  TEMP_MIGRATION_PROMPT.md  cacco.cabal  circle.yml  hie.yaml  package.yaml  stack.yaml
.cursor/: .gitignore
.cursor/commands/: haskell-build.md  haskell-haddock.md  haskell-lint.md  haskell-test.md  serena-activate-project.md  serena-index-project.md  serena-start-mcp.md  serena-with-haskell.md
.cursor/rules/: haskell-development.mdc
.github/: .gitignore
.serena/: .gitignore  project.yml
.serena/memories/: cacco_project_overview.md  haskell-lsp-setup.md
.serena/scripts/: serena-activate-project.sh  serena-index-project.sh  serena-start-mcp.sh  serena-with-haskell.sh
app/: Main.hs
doc/: basics.asciidoc
src/: Lib.hs
src/Cacco/: Ann.hs  Ast.hs  Core.hs  Env.hs  Error.hs  Eval.hs  Eval2.hs  Expr.hs  Fix.hs  Inferencer.hs  IxFix.hs  Lexer.hs  Literal.hs  Location.hs  Parser.hs  Position.hs  REPL.hs  Type.hs  Val.hs
src/Cacco/Error/: ArityMismatch.hs  IsError.hs  TypeMismatch.hs
src/Cacco/Eval/: Indexed.hs
src/Cacco/Syntax/: AST.hs  Ast.hs  ContextIndex.hs  Expr.hs  Expression.hs  Index.hs  Lexer.hs  Literal.hs  Location.hs  Parser.hs  Position.hs  Term.hs
src/Cacco/Syntax/AST/: Indexed.hs
src/Cacco/Syntax/Parser/: AST.hs  Internal.hs  Lexer.hs  Literal.hs  Numeric.hs
src/Cacco/Syntax/Parser/AST/: Indexed.hs
src/Control/Comonad/Ix/: IxCofree.hs
src/Control/Monad/Ix/: IxFree.hs
src/Data/: Ann.hs  Fix.hs  IxAnn.hs  IxFix.hs
src/Data/Functor/: Hi.hs  Ix.hs
src/Data/Functor/Hi/: HiFix.hs  HiFoldable.hs  HiFree.hs  HiFunctor.hs  HiRecursive.hs  HiTraversable.hs  Types.hs
src/Data/Functor/Ix/: IxEq.hs  IxFix.hs  IxFoldable.hs  IxFree.hs  IxFunctor.hs  IxRecursive.hs  IxTraversable.hs  Types.hs
test/Cacco/: EvalSpec.hs  ExprSpec.hs  LexerSpec.hs  LiteralSpec.hs  LocationSpec.hs  ParserSpec.hs  PositionSpec.hs
test/Cacco/Parser/: ASTSpec.hs  LexerSpec.hs  NumericSpec.hs
test/Cacco/Parser/AST/: IndexedASTParserSpec.hs
test/Cacco/Syntax/: ASTSpec.hs  IndexSpec.hs  LiteralSpec.hs  LocationSpec.hs  PositionSpec.hs  TermSpec.hs
test/Cacco/Syntax/Index/: Series.hs
test/Cacco/Syntax/Literal/: Series.hs
test/Test/SmallCheck/: Numeric.hs
