name:                cacco
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VoQn/cacco#readme
license:             BSD3
license-file:        LICENSE
author:              Kazuhiro Mizushima
maintainer:          voqn.tyrant@gmail.com
copyright:           2017 Kazuhiro Mizushima
category:            Language
build-type:          Simple
extra-source-files:  README.asciidoc
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:
    -Wall
  exposed-modules:
      Lib
    , Cacco.Location
    , Cacco.Expr
    , Cacco.Ast
    , Cacco.Lexer
    , Cacco.Parser
    , Cacco.REPL
    , Cacco.Type
    , Cacco.Inferencer
  build-depends:
      base >= 4.7 && < 5
    , mtl  >= 2.2 && < 3
    , containers >= 0.5 && < 0.6
    , text >= 1.2 && < 2
    , scientific >= 0.3 && < 0.4
    , megaparsec >= 5.2 && < 6
    , lens >= 4.15 && < 4.16
    , haskeline >= 0.7 && < 0.8

executable cacco
  default-language:  Haskell2010
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base
    , cacco

test-suite test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Tasty.hs
  build-depends:
      base
    , tasty
    , tasty-discover >= 2.0 && < 3
    , tasty-hspec >= 1.1 && < 1.2
    , tasty-quickcheck
    , tasty-smallcheck
    , megaparsec
    , scientific
    , lens
    , cacco
  other-modules:
      Cacco.LocationSpec
    , Cacco.ExprSpec
    , Cacco.LexerSpec
    , Cacco.ParserSpec
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/VoQn/cacco
