name:                cacco
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VoQn/cacco#readme
license:             BSD3
license-file:        LICENSE
author:              Kazuhiro Mizushima
maintainer:          voqn.tyrant@gmail.com
copyright:           2017 Kazuhiro Mizushima
category:            Language
build-type:          Simple
extra-source-files:  README.asciidoc
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/VoQn/cacco

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:
    -Wall
  exposed-modules:
      Lib
    , Data.Fix
    , Data.IxFix
    , Data.Ann
    , Data.IxAnn
    , Cacco.Syntax.Position
    , Cacco.Syntax.Location
    , Cacco.Syntax.Literal
    , Cacco.Syntax.Ast
    , Cacco.Syntax.Expr
    , Cacco.Syntax.Parser.Internal
    , Cacco.Syntax.Parser.Lexer
    , Cacco.Syntax.Parser.Numeric
    , Cacco.Syntax.Parser.Literal
    , Cacco.Syntax.Parser
    , Cacco.Val
    , Cacco.Error.IsError
    , Cacco.Error.ArityMismatch
    , Cacco.Error.TypeMismatch
    , Cacco.Error
    , Cacco.Env
    , Cacco.Core
    , Cacco.Eval
    , Cacco.REPL
    , Cacco.Type
    , Cacco.Inferencer
  build-depends:
      base >= 4.7 && < 5
    , vector
    , deepseq >= 1.4 && < 2
    , mtl  >= 2.2 && < 3
    , containers >= 0.5 && < 0.6
    , text >= 1.2 && < 2
    , half >= 0.2 && < 1
    , scientific >= 0.3 && < 0.4
    , megaparsec >= 6 && < 7
    , lens >= 4.15 && < 4.16
    , haskeline >= 0.7 && < 0.8

executable cacco
  default-language:  Haskell2010
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base
    , cacco

test-suite test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Tasty.hs
  build-depends:
      base
    , text
    , half
    , tasty >= 1.0 && < 2.0
    , tasty-discover >= 4.0 && < 5.0
    , tasty-hspec
    , tasty-quickcheck
    , tasty-smallcheck
    , scientific
    , lens
    , cacco
  other-modules:
      Cacco.PositionSpec
    , Cacco.LiteralSpec
    , Cacco.Parser.LexerSpec
    , Cacco.Parser.NumericSpec
    , Cacco.ParserSpec
    , Cacco.EvalSpec
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
